--- a/server/apps/distributed-app/README.adoc
+++ b/server/apps/distributed-app/README.adoc
@@ -40,7 +40,7 @@ Once everything is set up, you just have to run the jar with:
 
 [source]
 ----
-$ java -Dworking.directory=. -Dlogback.configurationFile=conf/logback.xml -jar james-server-distributed-app.jar
+$ java -Dworking.directory=. -Dlogback.configurationFile=conf/logback.xml -Djdk.tls.ephemeralDHKeySize=2048 -jar james-server-distributed-app.jar
 ----
 
 Note that binding ports below 1024 requires administrative rights.
