--- a/docs/modules/servers/pages/distributed/configure/imap.adoc
+++ b/docs/modules/servers/pages/distributed/configure/imap.adoc
@@ -68,7 +68,7 @@ will be closed. Negative value disable this behaviour.
 | tls
 | Set to true to support STARTTLS or SSL for the Socket.
 To use this you need to copy sunjce_provider.jar to /path/james/lib directory. To create a new keystore execute:
-`keytool -genkey -alias james -keyalg RSA -keystore /path/to/james/conf/keystore`.
+`keytool -genkey -alias james -keyalg RSA -storetype PKCS12 -keystore /path/to/james/conf/keystore`.
 Please note that each IMAP server exposed on different port can specify its own keystore, independently from any other
 TLS based protocols.
 
