--- a/docs/modules/servers/pages/distributed/configure/smtp.adoc
+++ b/docs/modules/servers/pages/distributed/configure/smtp.adoc
@@ -32,7 +32,7 @@ Port 465 is the well-known/IANA registered port for SMTP over TLS.
 | tls
 | Set to true to support STARTTLS or SSL for the Socket.
 To use this you need to copy sunjce_provider.jar to /path/james/lib directory. To create a new keystore execute:
-`keytool -genkey -alias james -keyalg RSA -keystore /path/to/james/conf/keystore`.
+`keytool -genkey -alias james -keyalg RSA -storetype PKCS12 -keystore /path/to/james/conf/keystore`.
 The algorithm is optional and only needs to be specified when using something other
 than the Sun JCE provider - You could use IbmX509 with IBM Java runtime.
 Please note that each SMTP/LMTP server exposed on different port can specify its own keystore, independently from any other
