JAMES-3150 Fix typo in blob garbage collection documentation

--- a/docs/modules/servers/pages/distributed/operate/webadmin.adoc
+++ b/docs/modules/servers/pages/distributed/operate/webadmin.adoc
@@ -2314,7 +2314,7 @@ blobs.
 To do so:
 
 ....
-curl -XDELETE http:ip:port/blobs?scope=unreferenced
+curl -XDELETE http://ip:port/blobs?scope=unreferenced
 ....
 
 link:#_endpoints_returning_a_task[More details about endpoints returning a task].
