--- a/docs/modules/servers/pages/distributed/configure/ssl.adoc
+++ b/docs/modules/servers/pages/distributed/configure/ssl.adoc
@@ -21,8 +21,9 @@ for TLS 1.0 which, as a result, is sometimes referred to as SSL 3.1.
 You need to add a block in the corresponding configuration file (smtpserver.xml, pop3server.xml, imapserver.xml,..)
 
 ....
-<tls socketTLS="false" startTLS="false">
+<tls socketTLS="false" startTLS="true">
   <keystore>file://conf/keystore</keystore>
+  <keystoreType>PKCS12</keystoreType>
   <secret>yoursecret</secret>
   <provider>org.bouncycastle.jce.provider.BouncyCastleProvider</provider>
 </tls>
@@ -53,6 +54,17 @@ It is also recommended to change the port number on which the service will liste
 
 You will now need to create your certificate store and place it in the james/conf/ folder with the name you defined in the keystore tag.
 
+Please note `JKS` keystore format is also supported (default value if no keystore type is specified):
+
+....
+<tls socketTLS="false" startTLS="true">
+  <keystore>file://conf/keystore</keystore>
+  <keystoreType>JKS</keystoreType>
+  <secret>yoursecret</secret>
+  <provider>org.bouncycastle.jce.provider.BouncyCastleProvider</provider>
+</tls>
+....
+
 == Certificate Keystores
 
 To use TLS/SSL inside James you will need a certificate keystore.
@@ -62,8 +74,8 @@ To use TLS/SSL inside James you will need a certificate keystore.
 
 (Adapted from the Tomcat 4.1 documentation)
 
-James currently operates only on JKS format keystores. This is Java's standard "Java KeyStore" format, and is the format
-created by the keytool command-line utility. This tool is included in the JDK.
+James currently operates only on JKS or PKCS12 format keystores. This is Java's standard "Java KeyStore" format, and is
+the format created by the keytool command-line utility. This tool is included in the JDK.
 
 To import an existing certificate into a JKS keystore, please read the documentation (in your JDK documentation package)
 about keytool.
@@ -72,7 +84,7 @@ To create a new keystore from scratch, containing a single self-signed Certifica
 command line:
 
 ....
-keytool -genkey -alias james -keyalg RSA -keystore your_keystore_filename
+keytool -genkey -alias james -keyalg RSA -storetype PKCS12 -keystore your_keystore_filename
 ....
 
 (The RSA algorithm should be preferred as a secure algorithm, and this also ensures general compatibility with other
