--- a/README.adoc
+++ b/README.adoc
@@ -5,6 +5,7 @@ link:https://gitter.im/apache/james-project[image:https://badges.gitter.im/apach
 image:https://img.shields.io/badge/Tested%20by-Apache%20Jenkins%20CI-blue.svg[link="https://ci-builds.apache.org/job/james/job/ApacheJames/"]
 image:https://img.shields.io/badge/Documentation-green.svg[link="https://james.apache.org/documentation.html"]
 image:https://img.shields.io/badge/Downloads-yellow.svg[link="https://james.apache.org/download.cgi"]
+image:https://img.shields.io/badge/Images-docker-blue.svg[link="https://hub.docker.com/r/apache/james"]
 
 image::james-logo.png[link="https://james.apache.org"]
 
