README how to can be h2 level

--- a/README.adoc
+++ b/README.adoc
@@ -42,7 +42,7 @@ https://issues.apache.org/jira/issues/?jql=project%20%3D%20JAMES%20AND%20resolut
 
 There is many other ways one can help us: packaging, communication, etc ...
 
-= How to...
+== How to...
 
  * link:#how-to-try-james[How to try James]
  * link:#how-to-check-the-compilation[How to check the compilation]
