--- a/server/apps/distributed-pop3-app/README.adoc
+++ b/server/apps/distributed-pop3-app/README.adoc
@@ -68,3 +68,10 @@ The [CLI](https://james.apache.org/server/manage-cli.html) can easily be used:
 ----
 docker exec CONTAINER-ID james-cli ListDomains
 ----
+
+Note that you can create a domain via an environment variable. This domain will be created upon James start:
+
+[source]
+----
+--environment DOMAIN=domain.tld
+----
