--- a/README.adoc
+++ b/README.adoc
@@ -174,6 +174,9 @@ Where :
 
 James comes with a https://james.apache.org/documentation.html[Documentation] and https://github.com/linagora/james-project/tree/master/src/adr[Architectural Decision Records].
 
+A more precise description of the *Distributed Server* architecture can be found
+link:https://james.staged.apache.org/james-project/3.7.0/servers/distributed/architecture/index.html[here].
+
 == Articles for James community
 
 * link:docs/modules/community/pages/website.adoc[How to build and publish the website]
