README Remove CLI commands from the index

--- a/README.adoc
+++ b/README.adoc
@@ -47,11 +47,8 @@ There is many other ways one can help us: packaging, communication, etc ...
  * link:#how-to-try-james[How to try James]
  * link:#how-to-check-the-compilation[How to check the compilation]
  * link:#how-to-run-james-in-docker[How to run James in Docker]
- * link:#other-useful-commands[Other Useful commands]
- ** link:#how-to-add-a-domain-[How to add a domain?]
- ** link:#how-to-add-a-user-[How to add a user?]
- ** link:#how-to-manage-sieve-scripts-[How to manage SIEVE scripts?]
- ** link:#how-to-retrieve-users-and-password-from-my-previous-container[How to retrieve users and password from my previous container?]
+ * link:#using_the_cli[Using the CLI]
+ * link:#how-to-manage-sieve-scripts-[How to manage SIEVE scripts?]
  * link:#develop-on-james[Develop on James]
  ** link:#how-to-run-deployment-tests[How to run deployment Tests]
  ** link:#how-to-check-the-merge-of-a-commit[How to check the merge of a commit]
